infra/kyverno/admission/disallow-default-namespace.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-default-namespace
  annotations:
    policies.kyverno.io/title: Disallow Default Namespace
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: default namespace is not allowed to be used to deploy pods    
spec:
  validationFailureAction: Enforce
  background: true
  rules:
  - name: disallow-default-namespace
    match:
      any:
      - resources:
          kinds:
            - Pod
    exclude:
      any:
      - resources:
          kinds:
            - Pod
          name: "*falco*" # To let falco be able to install itself
    validate:
      message: "Default namespace is not allowed"
      pattern:
        metadata:
          namespace: "!default"
  - name: validate-podcontroller-namespace
    match:
      any:
      - resources:
          kinds:
          - Deployment
          - Job
          - StatefulSet
    validate:
      message: "Default namespace is not allowed"
      pattern:
        metadata:
          namespace: "!default"
