infra/kyverno/admission/verify-image-registry.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-image-registry
  annotations:
    policies.kyverno.io/title: Verify Image Registry
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: Only accept images from ghcr.io and my repo    
spec:
  validationFailureAction: Enforce
  background: true
  rules:
  - name: validate-image-registry
    match:
      any:
      - resources:
          kinds:
            - Pod
          namespaces: # only setting for ssi to allow Falco to install itself properly
            - ssi
    validate:
      message: "Only images from ghcr.io/murielparaire/ssi/ are accepted"
      pattern:
        spec:
          =(ephemeralContainers):
          - image: "ghcr.io/murielparaire/ssi/*"
          =(initContainers):
          - image: "ghcr.io/murielparaire/ssi/*"
          containers:
          - image: "ghcr.io/murielparaire/ssi/*"
