infra/kyverno/admission/verify-liveness-probe.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-liveness-probe
  annotations:
    policies.kyverno.io/title: verify the liveness probe
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: Verify that each pod has a liveness probe defined     
spec:
  validationFailureAction: Enforce
  rules:
  - name: validate-probes
    match:
      any:
      - resources:
          kinds:
            - Pod
          namespaces: # only setting for ssi to allow Falco to install itself properly
            - ssi
    validate:
      message: "Please add a liveness probe"
      foreach:
      - list: request.object.spec.containers[]
        deny:
          conditions:
            all:
            - key: livenessProbe
              operator: AllNotIn
              value: "*"
